# zephyr_lpc55s69_puf

./: .gitignore  CMakeLists.txt  README.md  prj.conf
.west/: config
application/: CMakeLists.txt  prj.conf  west.yml
application/src/: bao_config.c  bao_config.h  flash_handler.h  main.c  mocktee.c  puf_prover.c  puf_prover.h  utils.c  utils.h
application/src/tee_mockcore/: tee_internal_api.h
src/: flash_handler.c  flash_handler.h  main.c  puf_prover.c  puf_prover.h
